@@ -10,5 +10,15 @@
         /// <param name="val">Measured value.</param>
         /// <param name="count">Number of observations with this value.</param>
         void Observe(double val, long count);
+
+        /// <summary>
+        /// Gets the sum of all observed events.
+        /// </summary>
+        double Sum { get; }
+
+        /// <summary>
+        /// Gets the count of all observed events.
+        /// </summary>
+        long Count { get; }
     }
 }
